# mrmedagent

./: .dockerignore  .env.cloudrun.example  .env.example  .github-workflows-deploy-agent-cloudrun.yml.example  .gitignore  .old_server.py  Dockerfile  README.deploy.md  README.md  cube_auth.py  cube_config.py  cube_service.py  daily_utils.py  dialout.py  docker-entrypoint.sh  exotel_service.py  inbound_system_prompt.py  outbound_system_prompt.py  postProcessor.py  prompt_shared.py  pyproject.toml  server.py  test.py  vertex.py  vertex_config.py  vertex_credentials.py
.github/workflows/: deploy-cloudrun.yml  google-cloudrun-docker.yml
cube/: .env.example  cube.js  package-lock.json  package.json
cube/lib/: diagnostics.js
cube/schema/: Alternatives.js  Diseases.js  DrugInteractions.js  Indications.js  Manufacturers.js  MedicineIndications.js  MedicineQuantityTiers.js  MedicineSalts.js  MedicineUses.js  MedicineWarnings.js  Medicines.js  Salts.js  SideEffects.js
cube/scripts/: start-cube.js
docs/: apireference.md  example.py  vertex.md
scripts/: cube_tools.py  generate_embeddings.py  semantic_search.py  vertex_check.py  wsl-setup.sh  wsl-start.sh
tools/: __init__.py  _announce.py  _cube.py  _guards.py  _medicine_search.py  compare_medicines.py  get_alternatives.py  get_drug_interactions.py  get_medicine_detail.py  get_quantity_pricing.py  get_side_effects.py  test_handlers.py
