[project]
name = "exotel-chatbot-dial-in"
version = "0.1.0"
description = "Exotel dial-in example for Pipecat"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pipecat-ai[websocket,cartesia,openai,silero,deepgram,runner,google,webrtc]==0.0.92",
  "pipecatcloud>=0.2.4",
  "aiortc",
  "requests",
  "pyjwt>=2.8.0",
  "python-dotenv",
  "loguru",
  "fastapi",
  "uvicorn",
  "aiohttp",
  "pyngrok",
  "groq",
  "psycopg2-binary",
]
